src/examples/should_fail/clash_terminal_terminal.kiki
start Epsilon

enum Epsilon {
    Nil
}

terminal Token {
    $Num: isize
    $Num: isize
}
